fix: Dark mode selected account area

--- a/packages/extension/public/style/navigation.css
+++ b/packages/extension/public/style/navigation.css
@@ -266,13 +266,12 @@
 }
 
 .navigation--dark {
-  box-shadow: 0 5px 10px -5px #1a1b20;
   background-color: #2c2d33;
 }
 
-.navigation--dark .navigation__account--selected {
-  box-shadow: 0 5px 10px -5px #1a1b20;
+.dark-theme .navigation__account--selected {
   background-color: #2c2d33;
+  box-shadow: 0 5px 10px -5px #1a1b20;
 }
 
 .navigation--dark .reef-logo {
